# rust-axum-template

./: .env  Cargo.toml  README.md
src/: db.rs  env.rs  helpers.rs  main.rs
src/docs/db/: establish_connection.md
src/docs/dotenv/: get.md  get_or_default.md  main.md  new.md
src/docs/helpers/: get_address.md
src/docs/routes/: app_routes.md
src/routes/: mod.rs
