[package]
name = "protetoressalvarcao"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1", features = ['full'] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

dotenvy = "0.15"
tracing = "0.1.40"

tower = '0.5.1'

[dev-dependencies]
hyper = "1.5.1"
serial_test = "3.2.0"