[package]
name = "rust-axum-template"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.41.1", features = ['full'] }

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

dotenvy = "0.15.7"
tracing = "0.1.41"

tower = '0.5.1'
diesel = { version = "2.2.5", features = ["postgres", "r2d2", "uuid"] }

uuid = { version = "1.11.0", features = ["serde", "v4"] }

[dev-dependencies]
hyper = "1.5.1"
serial_test = "3.2.0"
